    * The following methods in the Sys class are added.
    
      static method say : int ($stream : Sys::IO::FileStream, $string : string);

      static method STDIN : Sys::IO::FileStream ();

      static method STDOUT : Sys::IO::FileStream ();

      static method STDERR : Sys::IO::FileStream ();
      
      static method signal : void ($signum : int, $handler_name : string);
   
  [Incompatible Changes]
  
    * The Sys::Signal::Handler::Monitor class is removed.
    * The Sys::Signal::Handler::Unknown class is removed.
    
    * The following methods in the Sys::Signal class are removed.
      
      -  static method reset_monitored_signal : void ($signum : int);
      -  static method check_monitored_signal : int ($signum : int);
    
    * The following methods in the Sys::Signal class are changed.
      
      - native static method signal : Sys::Signal::Handler ($signum : int, $handler : Sys::Signal::Handler);
      + native static method signal : void ($signum : int, $handler : Sys::Signal::Handler);
      
      $handler must be a Sys::Signal::Handler::Default object or a Sys::Signal::Handler::Ignore object. Otherwise an exception is thrown.
      
      User signal handlers are wrong implementation for SPVM differnt from the C language.
    
Calls the L<stderr|SPVM::Sys::IO/"stderr"> method in the L<Sys::IO|SPVM::Sys::IO> class.
0.490 2023-09-11
  [Bug Fix]
    * Fix a bug that the fcntl method in the Sys::IO class does not work well.
0.489 2023-09-11
  [New Features]
    * The following methods in the Sys class are added.
    
      + static method fcntl : int ($fd : int, $command : int, $command_arg : object of Int|Sys::IO::Flock|object = undef);
  [Bug Fix]
    * Fix a bug that the fcntl method in the Sys::IO class does not work well.
0.488 2023-09-11
  [Prerequirement Changes]
    * Require SPVM 0.989041.
    
0.487 2023-09-08
  [New Features]
    * The following methods in the Sys class are added.
    