@@ -1051,4 +1051,11 @@ class Sys {
     Sys::Signale->signal($signum, $handler);
   }
   
+  static method kill : int ($sig : int, $pid : int) {
+    my $status = Sys::Signal->kill($pid, $sig);
+    
+    my $success = $status == 0;
+    
+    return $success;
+  }
 }
